--- a/forgot.html
+++ b/forgot.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--This page is a joke and does not have any functionality-->
 <html lang="en">
   <link rel="stylesheet" href="forgot.css" />
   <head>
