--- a/tHome.html
+++ b/tHome.html
@@ -1,5 +1,7 @@
+<!-- HTML document declaration -->
 <!DOCTYPE html>
 <html lang="en">
+  <!-- Link to the external stylesheet -->
   <link rel="stylesheet" href="tHome.css" />
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,11 +16,14 @@
         <p id="lID"></p>
       </center>
 
-      <!--Directory of Buttons-->
+      <!-- Directory of Buttons -->
+
+      <!-- Add a Book button -->
       <button class="addBookBTN" onclick="window.location.href='addBook.html'">
         Add a Book
       </button>
 
+      <!-- Check out a Book button -->
       <button
         class="checkBookBTN"
         onclick="window.location.href='checkBook.html'"
@@ -26,15 +31,17 @@
         Check out a Book
       </button>
 
+      <!-- Return a Book button -->
       <button class="rtnBookBTN" onclick="window.location.href='retBook.html'">
         Return a Book
       </button>
 
+      <!-- Delete a Book button -->
       <button class="delBookBTN" onclick="window.location.href='delBook.html'">
         Delete a Book
       </button>
 
-      <!--Log out button-->
+      <!-- Log out button -->
       <br /><br />
       <button class="logout" onclick="window.location.href='techLogin.html'">
         Log Out
