--- a/delBook.html
+++ b/delBook.html
@@ -12,34 +12,44 @@
       <button class="cancelBtn" onclick="window.location.href='tHome.html'">
         Return to Home
       </button>
-      <br> <br> <hr> 
+      <br />
+      <br />
+      <hr />
       <center>
-     <p>Please Enter the Book Number of the Book You would like to delete</p>   
-      <form class="rBook2">
-        <hr />
-        <br />
-        <!--Start of Form-->
+        <!-- Title -->
+        <p>Please Enter the Book Number of the Book You would like to delete</p>
 
-        <label for="numDBook">Book Number : </label>
-        <input
-          type="text"
-          placeholder="#####"
-          name="numDBook"
-          id="numDBook"
-          required
-        />
+        <!-- Start of Form -->
+        <form class="rBook2">
+          <hr />
+          <br />
 
-        <p>
-          **Book Numbers are located on the Sticker and Stamped on the Cover
-        </p>
+          <!-- Book Number Input -->
+          <label for="numDBook">Book Number :</label>
+          <input
+            type="text"
+            placeholder="#####"
+            name="numDBook"
+            id="numDBook"
+            required
+          />
 
-        <!--Submit Form-->
-        <br />
-        <button type="submit" class="subDBook" onclick="deleteBook(this.form)">
-          Delete Book
-        </button>
+          <!-- Additional Information -->
+          <p>
+            **Book Numbers are located on the Sticker and Stamped on the Cover
+          </p>
+
+          <!-- Submit Form -->
+          <br />
+          <button
+            type="submit"
+            class="subDBook"
+            onclick="deleteBook(this.form)"
+          >
+            Delete Book
+          </button>
+        </form>
       </center>
-      </form>
     </div>
   </body>
 </html>
